--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ NEXT_PUBLIC_URL=http://localhost:3000
 # Ensure there is no trailing slash ("/") at the end.
 
 # Consumet API URL
-NEXT_PUBLIC_CONSUMET_URL=
+NEXT_PUBLIC_CONSUMET_URL=https://consuapi-nu.vercel.app
 # Add the URL for your Consumet API here. This is required for your website to function correctly.
 
 # AniList API Configuration
