Update and rename .env.example to .env

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Base URL for your application
-NEXT_PUBLIC_URL=http://localhost:3000
+NEXT_PUBLIC_URL=https://aniplay-eight.vercel.app
 # Replace with your website URL if deployed, otherwise keep localhost with your port.
 # Ensure there is no trailing slash ("/") at the end.
 
@@ -20,7 +20,7 @@ NEXTAUTH_SECRET=
 # openssl rand -base64 32
 # Paste the result here.
 
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://aniplay-eight.vercel.app
 # Replace with your website URL if deployed, otherwise keep localhost with your port.
 # Ensure there is no trailing slash ("/") at the end.
 
